# gra

./: CMakeLists.txt  data.c  data.h  dataTest.c  datatypes.h  main.c  paperwidget.c  paperwidget.h
doc/: DBSchema-1.dia
